tests/baselines/reference/stringLiteralTypesInUnionTypes01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes01.ts(4,5): error TS2322: Type 'string' is not assignable to type '"foo" | "bar" | "baz"'.
  Type 'string' is not assignable to type '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes01.ts(5,5): error TS2322: Type 'string' is not assignable to type '"foo" | "bar" | "baz"'.
  Type 'string' is not assignable to type '"baz"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes01.ts (2 errors) ====
    
    type T = "foo" | "bar" | "baz";
    
    var x: "foo" | "bar" | "baz" = "foo";
        ~
!!! error TS2322: Type 'string' is not assignable to type '"foo" | "bar" | "baz"'.
!!! error TS2322:   Type 'string' is not assignable to type '"baz"'.
    var y: T = "bar";
        ~
!!! error TS2322: Type 'string' is not assignable to type '"foo" | "bar" | "baz"'.
!!! error TS2322:   Type 'string' is not assignable to type '"baz"'.
    
    if (x === "foo") {
        let a = x;
    }
    else if (x !== "bar") {
        let b = x || y;
    }
    else {
        let c = x;
        let d = y;
        let e: (typeof x) | (typeof y) = c || d;
    }
    
    x = y;
    y = x;